[gd_scene load_steps=2 format=3 uid="uid://biaewsad0vfk1"]

[ext_resource type="Script" uid="uid://bx0y7mnl4hkxy" path="res://entities/level_objects/level_camera.gd" id="1_rceew"]

[node name="LevelCamera" type="Node2D"]
script = ExtResource("1_rceew")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TopCamBound" type="Node2D" parent="."]
position = Vector2(-4, -373)

[node name="ColorRect" type="ColorRect" parent="TopCamBound"]
offset_left = -50.0
offset_top = -11.0
offset_right = 50.0
offset_bottom = 9.0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="BottomCamBound" type="Node2D" parent="."]
position = Vector2(4, 367)

[node name="ColorRect" type="ColorRect" parent="BottomCamBound"]
offset_left = -50.0
offset_top = -11.0
offset_right = 50.0
offset_bottom = 9.0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="LeftCamBound" type="Node2D" parent="."]
position = Vector2(-616, -1)

[node name="ColorRect" type="ColorRect" parent="LeftCamBound"]
offset_left = -10.0
offset_top = -50.0
offset_right = 10.0
offset_bottom = 50.0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="RightCamBound" type="Node2D" parent="."]
position = Vector2(623, -2)

[node name="ColorRect" type="ColorRect" parent="RightCamBound"]
offset_left = -10.0
offset_top = -50.0
offset_right = 10.0
offset_bottom = 50.0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true
